--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,30 +2,6 @@ $color-primary:#9356DC;
 $color-secondary:#FF79DA;
 $color-tertiary:#99E2D0;
 
-$bg:(
-    img2:(
-        url: url("/Maquettes-Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"),
-        position: 0 -147px
-    ),
-    img3:(
-        url: url("/Maquettes-Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"),
-        position: bottom
-    ),
-    img4:(
-        url: url("/Maquettes-Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"),
-        position: bottom
-    )
-);
-
-@mixin image($bg){
-    @each $img, $prp in $bg{
-        &--#{$img}{
-            background-image: map-get($prp, url);
-            background-position: map-get($prp, position);
-        }  
-    }
-}
-
 *{
     font-family: 'roboto', sans-serif;
 }
@@ -61,7 +37,7 @@ header{
         }
     }
 }
-#exploration{
+.exploration{
     background-color: rgb(239, 239, 239);
     padding: 40px 0 60px;
     h1{
@@ -77,10 +53,9 @@ header{
         color: grey;
         font-size: 1.2rem;
     }
-    .btn{
-        width: 50%;
+    &__btn{
         margin: auto;
-        background-color: $color-primary;
+        background: linear-gradient(350deg, $color-primary 0%, $color-secondary 100%);
         color: #fff;
         height: 50px;
         line-height: 50px;
@@ -89,6 +64,7 @@ header{
         box-shadow: 0px 5px 10px #a9a3a3;
         display: flex;
         justify-content: center;
+        cursor: pointer;
     }
 }
 nav{
@@ -114,6 +90,12 @@ nav{
         background-color:rgb(239, 239, 239);
         border-radius: 20px;
         box-shadow: 0px 5px 10px #a9a3a3;
+        &:hover{
+            background-color: rgb(253, 222, 255);
+            i{
+                color:$color-primary;
+            }
+        }
         &__numbers{
             width: 20px;
             height: 20px;
@@ -156,32 +138,37 @@ section{
         &__block{
             width: 320px;
             height: 230px;
-            display: flex;
-            flex-direction: column;
             background-color: #fff;
             border-radius: 15px;
             box-shadow: 0px 5px 10px #a9a3a3;
             &__images{
-                height: 160px;
-                background-image: url("/Maquettes-Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-position: bottom;
                 border-radius: 15px 15px 0 0;
-                @include image($bg)
-            }
-            p{
-                height: 25px;
-                width: 80px;
-                font-size: 0.9rem;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                border-radius: 2px 2px 2px 2px;
-                position:relative;
-                left: 225px;
-                background-color: $color-tertiary;
-                color: rgb(35, 145, 104);
+                height: 160px;
+                img{
+                    height:160px;
+                    width: 100%;
+                    object-fit: cover;
+                    object-position: bottom;
+                }
+                &--position{
+                    img{
+                        object-position: 0 -145px;
+                    }
+                }
+                p{
+                    height: 25px;
+                    width: 80px;
+                    font-size: 0.9rem;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    border-radius: 2px 2px 2px 2px;
+                    position:relative;
+                    left: 225px;
+                    top: -165px;
+                    background-color: $color-tertiary;
+                    color: rgb(35, 145, 104);
+                }
             }
             &__details{
                 display: flex;
@@ -200,6 +187,7 @@ section{
                 &__icones{
                     margin-right: 20px;
                     font-size: 1.5rem;
+                    cursor: pointer;
                     .fas{
                         display: none;
                     }
@@ -207,6 +195,10 @@ section{
                         color: $color-primary;
                         .fas{
                             display: block;
+                            text-transform: uppercase;
+                            background: linear-gradient($color-primary 0, $color-secondary 100%);
+                            -webkit-background-clip: text;
+                            -webkit-text-fill-color: transparent;
                         }
                         .far{
                             display: none;
@@ -240,6 +232,142 @@ footer{
                     width: 20px;
                 }
             }
+        }
+    }
+}
+header i{
+    font-size: 1.7rem;
+    color: black;
+}
+.arrow{
+    position: relative;
+    right:20%;
+}
+.image-menu{
+    display: flex;
+    justify-content: center;
+    height: 300px;
+    img{
+        object-fit: cover;
+    }
+}
+.menu{
+    border-radius: 50px 50px 0 0;
+    background-color: #f2f2f2;
+    position: relative;
+    top: -55px;
+    margin-bottom: -55px;
+    padding-bottom: 100px;
+    &__title{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        h1{
+            margin-left: 20px;
+            font-family: 'Shrikhand', sans-serif;
+        }
+        &__icone{
+            margin-right: 40px;
+            font-size: 1.5rem;
+            cursor: pointer;
+            .fas{
+                display: none;
+            }
+            &:hover{
+                color: $color-primary;
+                .fas{
+                    display: block;
+                    text-transform: uppercase;
+                    background: linear-gradient($color-primary 0, $color-secondary 100%);
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                }
+                .far{
+                    display: none;
+                }
+            }
+        }
+    }
+    &__blocks{
+        width: 350px;
+        margin: auto;
+        h3{
+            font-weight: normal;
+            margin-left: 5px;
+            hr{
+                color: $color-tertiary;
+                border: 2px solid;
+                width: 50px;
+                margin-left: 0;
+            }
+        }
+        &__choix{
+            background-color: white;
+            border-radius: 20px;
+            height: 70px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 20px;
+            &__détails{
+                display: flex;
+                justify-content: space-between;
+                flex: 1;
+                &__titres{
+                    h4{
+                        font-weight: bold;
+                        font-size: 1.2rem;
+                        margin: 10px 0 5px 12px;
+                        -webkit-line-clamp: 1;
+                        display: -webkit-box;
+                        -webkit-box-orient: vertical;
+                        overflow: hidden;
+                    }
+                    p{
+                        margin: 0 0 15px 12px;
+                        -webkit-line-clamp: 1;
+                        display: -webkit-box;
+                        -webkit-box-orient: vertical;
+                        overflow: hidden;
+                    }
+                }
+                &__prix{
+                    text-align: end;
+                    display: flex;
+                    align-items: flex-end;
+                    margin: 0 20px 15px 0;
+                    font-weight: bold;
+                }
+            }
+            &:hover{
+                 .menu__blocks__choix__check{
+                     display: block;
+                 }
+            }
+            &__check{
+                font-size: 1.3rem;
+                width: 60px;
+                line-height: 70px;
+                background-color: $color-tertiary;
+                color: white;
+                border-radius: 0 20px 20px 0;
+                cursor: pointer;
+                text-align: center;
+                display: none;
+            }
+        }
+        &__btn{
+            margin: 50px auto 0;
+            background: linear-gradient(350deg, $color-primary 0%, $color-secondary 100%);
+            color: #fff;
+            height: 50px;
+            line-height: 50px;
+            width: 200px;
+            border-radius: 25px;
+            box-shadow: 0px 5px 10px #a9a3a3;
+            display: flex;
+            justify-content: center;
+            cursor: pointer;
         }
     }
 }
