--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   font-family: "roboto", sans-serif;
 }
@@ -38,27 +39,26 @@ header {
   color: black;
 }
 
-#exploration {
+.exploration {
   background-color: #efefef;
   padding: 40px 0 60px;
 }
-#exploration h1 {
+.exploration h1 {
   width: 75%;
   margin: auto;
   text-align: center;
   font-size: 1.5rem;
 }
-#exploration p {
+.exploration p {
   width: 90%;
   margin: 15px auto 30px;
   text-align: center;
   color: grey;
   font-size: 1.2rem;
 }
-#exploration .btn {
-  width: 50%;
+.exploration__btn {
   margin: auto;
-  background-color: #9356DC;
+  background: linear-gradient(350deg, #9356DC 0%, #FF79DA 100%);
   color: #fff;
   height: 50px;
   line-height: 50px;
@@ -67,6 +67,7 @@ header {
   box-shadow: 0px 5px 10px #a9a3a3;
   display: flex;
   justify-content: center;
+  cursor: pointer;
 }
 
 nav {
@@ -93,6 +94,12 @@ nav .fonctionnement-blocks {
   background-color: #efefef;
   border-radius: 20px;
   box-shadow: 0px 5px 10px #a9a3a3;
+}
+nav .fonctionnement-blocks:hover {
+  background-color: #fddeff;
+}
+nav .fonctionnement-blocks:hover i {
+  color: #9356DC;
 }
 nav .fonctionnement-blocks__numbers {
   width: 20px;
@@ -137,33 +144,24 @@ section .restaurants a {
 section .restaurants__block {
   width: 320px;
   height: 230px;
-  display: flex;
-  flex-direction: column;
   background-color: #fff;
   border-radius: 15px;
   box-shadow: 0px 5px 10px #a9a3a3;
 }
 section .restaurants__block__images {
-  height: 160px;
-  background-image: url("/Maquettes-Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: bottom;
   border-radius: 15px 15px 0 0;
+  height: 160px;
 }
-section .restaurants__block__images--img2 {
-  background-image: url("/Maquettes-Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
-  background-position: 0 -147px;
+section .restaurants__block__images img {
+  height: 160px;
+  width: 100%;
+  object-fit: cover;
+  object-position: bottom;
 }
-section .restaurants__block__images--img3 {
-  background-image: url("/Maquettes-Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
-  background-position: bottom;
+section .restaurants__block__images--position img {
+  object-position: 0 -145px;
 }
-section .restaurants__block__images--img4 {
-  background-image: url("/Maquettes-Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
-  background-position: bottom;
-}
-section .restaurants__block p {
+section .restaurants__block__images p {
   height: 25px;
   width: 80px;
   font-size: 0.9rem;
@@ -173,6 +171,7 @@ section .restaurants__block p {
   border-radius: 2px 2px 2px 2px;
   position: relative;
   left: 225px;
+  top: -165px;
   background-color: #99E2D0;
   color: #239168;
 }
@@ -194,6 +193,7 @@ section .restaurants__block__details h4 {
 section .restaurants__block__details__icones {
   margin-right: 20px;
   font-size: 1.5rem;
+  cursor: pointer;
 }
 section .restaurants__block__details__icones .fas {
   display: none;
@@ -203,6 +203,10 @@ section .restaurants__block__details__icones:hover {
 }
 section .restaurants__block__details__icones:hover .fas {
   display: block;
+  text-transform: uppercase;
+  background: linear-gradient(#9356DC 0, #FF79DA 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 section .restaurants__block__details__icones:hover .far {
   display: none;
@@ -233,6 +237,142 @@ footer ul li a {
 footer ul li a i {
   margin-right: 10px;
   width: 20px;
+}
+
+header i {
+  font-size: 1.7rem;
+  color: black;
+}
+
+.arrow {
+  position: relative;
+  right: 20%;
+}
+
+.image-menu {
+  display: flex;
+  justify-content: center;
+  height: 300px;
+}
+.image-menu img {
+  object-fit: cover;
+}
+
+.menu {
+  border-radius: 50px 50px 0 0;
+  background-color: #f2f2f2;
+  position: relative;
+  top: -55px;
+  margin-bottom: -55px;
+  padding-bottom: 100px;
+}
+.menu__title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.menu__title h1 {
+  margin-left: 20px;
+  font-family: "Shrikhand", sans-serif;
+}
+.menu__title__icone {
+  margin-right: 40px;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+.menu__title__icone .fas {
+  display: none;
+}
+.menu__title__icone:hover {
+  color: #9356DC;
+}
+.menu__title__icone:hover .fas {
+  display: block;
+  text-transform: uppercase;
+  background: linear-gradient(#9356DC 0, #FF79DA 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.menu__title__icone:hover .far {
+  display: none;
+}
+.menu__blocks {
+  width: 350px;
+  margin: auto;
+}
+.menu__blocks h3 {
+  font-weight: normal;
+  margin-left: 5px;
+}
+.menu__blocks h3 hr {
+  color: #99E2D0;
+  border: 2px solid;
+  width: 50px;
+  margin-left: 0;
+}
+.menu__blocks__choix {
+  background-color: white;
+  border-radius: 20px;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.menu__blocks__choix__détails {
+  display: flex;
+  justify-content: space-between;
+  flex: 1;
+}
+.menu__blocks__choix__détails__titres h4 {
+  font-weight: bold;
+  font-size: 1.2rem;
+  margin: 10px 0 5px 12px;
+  -webkit-line-clamp: 1;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.menu__blocks__choix__détails__titres p {
+  margin: 0 0 15px 12px;
+  -webkit-line-clamp: 1;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.menu__blocks__choix__détails__prix {
+  text-align: end;
+  display: flex;
+  align-items: flex-end;
+  margin: 0 20px 15px 0;
+  font-weight: bold;
+}
+.menu__blocks__choix:hover .menu__blocks__choix__check {
+  display: block;
+}
+.menu__blocks__choix__check {
+  font-size: 1.3rem;
+  width: 60px;
+  line-height: 70px;
+  background-color: #99E2D0;
+  color: white;
+  border-radius: 0 20px 20px 0;
+  cursor: pointer;
+  text-align: center;
+  display: none;
+}
+.menu__blocks__btn {
+  margin: 50px auto 0;
+  background: linear-gradient(350deg, #9356DC 0%, #FF79DA 100%);
+  color: #fff;
+  height: 50px;
+  line-height: 50px;
+  width: 200px;
+  border-radius: 25px;
+  box-shadow: 0px 5px 10px #a9a3a3;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=styles.css.map */
