--- a/sass/main.scss
+++ b/sass/main.scss
@@ -249,7 +249,12 @@ header i{
     height: 300px;
     img{
         object-fit: cover;
+        width: 110%;
     }
+}
+main{
+    background-color: #f2f2f2;
+    padding-bottom: 100px;
 }
 .menu{
     border-radius: 50px 50px 0 0;
@@ -257,11 +262,14 @@ header i{
     position: relative;
     top: -55px;
     margin-bottom: -55px;
-    padding-bottom: 100px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
     &__title{
         display: flex;
         justify-content: space-between;
         align-items: center;
+        width: 100%;
         h1{
             margin-left: 20px;
             font-family: 'Shrikhand', sans-serif;
@@ -289,7 +297,6 @@ header i{
         }
     }
     &__blocks{
-        width: 350px;
         margin: auto;
         h3{
             font-weight: normal;
@@ -304,6 +311,7 @@ header i{
         &__choix{
             background-color: white;
             border-radius: 20px;
+            width: 350px;
             height: 70px;
             display: flex;
             align-items: center;
@@ -356,18 +364,18 @@ header i{
                 display: none;
             }
         }
-        &__btn{
-            margin: 50px auto 0;
-            background: linear-gradient(350deg, $color-primary 0%, $color-secondary 100%);
-            color: #fff;
-            height: 50px;
-            line-height: 50px;
-            width: 200px;
-            border-radius: 25px;
-            box-shadow: 0px 5px 10px #a9a3a3;
-            display: flex;
-            justify-content: center;
-            cursor: pointer;
-        }
-    }
+    } 
+}
+.btn{
+     margin: 50px auto 0;
+    background: linear-gradient(350deg, $color-primary 0%, $color-secondary 100%);
+     color: #fff;
+     height: 50px;
+     line-height: 50px;
+     width: 200px;
+     border-radius: 25px;
+     box-shadow: 0px 5px 10px #a9a3a3;
+     display: flex;
+     justify-content: center;
+     cursor: pointer;
 }
