--- a/css/styles.css
+++ b/css/styles.css
@@ -256,6 +256,12 @@ header i {
 }
 .image-menu img {
   object-fit: cover;
+  width: 110%;
+}
+
+main {
+  background-color: #f2f2f2;
+  padding-bottom: 100px;
 }
 
 .menu {
@@ -264,12 +270,15 @@ header i {
   position: relative;
   top: -55px;
   margin-bottom: -55px;
-  padding-bottom: 100px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
 }
 .menu__title {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
 }
 .menu__title h1 {
   margin-left: 20px;
@@ -297,7 +306,6 @@ header i {
   display: none;
 }
 .menu__blocks {
-  width: 350px;
   margin: auto;
 }
 .menu__blocks h3 {
@@ -313,6 +321,7 @@ header i {
 .menu__blocks__choix {
   background-color: white;
   border-radius: 20px;
+  width: 350px;
   height: 70px;
   display: flex;
   align-items: center;
@@ -361,7 +370,8 @@ header i {
   text-align: center;
   display: none;
 }
-.menu__blocks__btn {
+
+.btn {
   margin: 50px auto 0;
   background: linear-gradient(350deg, #9356DC 0%, #FF79DA 100%);
   color: #fff;
