--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ nav .fonctionnement-blocks {
   box-shadow: 0px 5px 10px #a9a3a3;
 }
 nav .fonctionnement-blocks:hover {
-  background-color: #fddeff;
+  background-color: #efe5f1;
 }
 nav .fonctionnement-blocks:hover i {
   color: #9356DC;
@@ -259,11 +259,6 @@ header i {
   width: 110%;
 }
 
-main {
-  background-color: #f2f2f2;
-  padding-bottom: 100px;
-}
-
 .menu {
   border-radius: 50px 50px 0 0;
   background-color: #f2f2f2;
@@ -371,7 +366,12 @@ main {
   display: none;
 }
 
-.btn {
+.container {
+  background-color: #f2f2f2;
+  padding-bottom: 100px;
+  border: #f2f2f2 1px solid;
+}
+.container__btn {
   margin: 50px auto 0;
   background: linear-gradient(350deg, #9356DC 0%, #FF79DA 100%);
   color: #fff;
