--- a/sass/main.scss
+++ b/sass/main.scss
@@ -91,7 +91,7 @@ nav{
         border-radius: 20px;
         box-shadow: 0px 5px 10px #a9a3a3;
         &:hover{
-            background-color: rgb(253, 222, 255);
+            background-color: rgb(239, 229, 241);
             i{
                 color:$color-primary;
             }
@@ -252,10 +252,6 @@ header i{
         width: 110%;
     }
 }
-main{
-    background-color: #f2f2f2;
-    padding-bottom: 100px;
-}
 .menu{
     border-radius: 50px 50px 0 0;
     background-color: #f2f2f2;
@@ -366,16 +362,21 @@ main{
         }
     } 
 }
-.btn{
-     margin: 50px auto 0;
-    background: linear-gradient(350deg, $color-primary 0%, $color-secondary 100%);
-     color: #fff;
-     height: 50px;
-     line-height: 50px;
-     width: 200px;
-     border-radius: 25px;
-     box-shadow: 0px 5px 10px #a9a3a3;
-     display: flex;
-     justify-content: center;
-     cursor: pointer;
+.container{
+    background-color: #f2f2f2;
+    padding-bottom: 100px;
+    border: #f2f2f2 1px solid;
+    &__btn{
+        margin: 50px auto 0;
+        background: linear-gradient(350deg, $color-primary 0%, $color-secondary 100%);
+        color: #fff;
+        height: 50px;
+        line-height: 50px;
+        width: 200px;
+        border-radius: 25px;
+        box-shadow: 0px 5px 10px #a9a3a3;
+        display: flex;
+        justify-content: center;
+        cursor: pointer;
+    }
 }
