--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,15 +1,7 @@
-$bg:(
-    img2:(
-        url: url("/Maquettes-Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"),
-        position: 0 150px
-    ),
-    img3:(
-        url: url("/Maquettes-Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"),
-        position: bottom
-    ),
-    img4:(
-        url: url("/Maquettes-Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"),
-        position: bottom
-    )
-);
+$color-primary:#9356DC;
+$color-secondary:#FF79DA;
+$color-tertiary:#99E2D0;
+$animation-duration: 1s;
+$animation-count:4;
+
 
