--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,417 +1,9 @@
 @import "utils/variables";
+@import "utils/animations";
+@import "utils/mixins";
 @import "base/normes";
-header{
-    width: 100%;
-}
-#block-logo{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 60px;
-}
-.search-bar{
-    background-color: #e3e3e3;
-    height: 50px;
-    border-top:3px solid rgb(210, 213, 210);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    input{
-        background-color: #e3e3e3;
-        width: 160px;
-        font-size: 1.2rem;
-        margin-left: 15px;
-        border: 0;
-        &::placeholder{
-            color: black;
-        }
-    }
-}
-.exploration{
-    background-color: rgb(239, 239, 239);
-    padding: 40px 0 60px;
-    h1{
-        width: 75%;
-        margin: auto;
-        text-align: center;
-        font-size: 1.5rem;
-    }
-    p{
-        width: 90%;
-        margin: 15px auto 30px;
-        text-align: center;
-        color: grey;
-        font-size: 1.2rem;
-    }
-    &__btn{
-        margin: auto;
-        background: linear-gradient(350deg, $color-primary 0%, $color-secondary 100%);
-        color: #fff;
-        height: 50px;
-        line-height: 50px;
-        width: 220px;
-        border-radius: 25px;
-        box-shadow: 0px 5px 10px #a9a3a3;
-        display: flex;
-        justify-content: center;
-        cursor: pointer;
-    }
-}
-nav{
-    width: 90%;
-    margin: auto;
-   h2{
-        margin: 40px 0 20px;
-    }
-    ul{
-        padding:0;
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        margin-bottom: 40px;
-    }
-    .fonctionnement-blocks{
-        display: flex;
-        align-items: center;
-        width: 320px;
-        height: 70px;
-        line-height: 70px;
-        margin:0 auto 25px;
-        background-color:rgb(239, 239, 239);
-        border-radius: 20px;
-        box-shadow: 0px 5px 10px #a9a3a3;
-        &:hover{
-            background-color: rgb(239, 229, 241);
-            i{
-                color:$color-primary;
-            }
-        }
-        &__numbers{
-            width: 20px;
-            height: 20px;
-            line-height: 20px;
-            display: flex;
-            justify-content: center;
-            border-radius: 20px;
-            background-color: $color-primary;
-            color: #fff;
-            position: relative;
-            left: -10px;
-        }
-        &__icones{
-            margin: 0 25px 0 10px;
-            font-size: 1.2rem;
-            color: grey;
-        }
-    }
-} 
-section{
-    background-color: #f4f1f1;
-    padding-bottom: 40px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    h2{
-        width: 90%;
-        margin: 40px auto 20px;
-    }
-    .restaurants{
-        width: 95%;
-        margin: auto;
-        display: flex;
-        flex-wrap: wrap;
-        a{
-            color: black;
-            text-decoration: none;
-            margin:0 auto 28px;
-        }
-        &__block{
-            width: 320px;
-            height: 230px;
-            background-color: #fff;
-            border-radius: 15px;
-            box-shadow: 0px 5px 10px #a9a3a3;
-            &__images{
-                border-radius: 15px 15px 0 0;
-                height: 160px;
-                img{
-                    height:160px;
-                    width: 100%;
-                    object-fit: cover;
-                    object-position: bottom;
-                }
-                &--position{
-                    img{
-                        object-position: 0 -145px;
-                    }
-                }
-                p{
-                    height: 25px;
-                    width: 80px;
-                    font-size: 0.9rem;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    border-radius: 2px 2px 2px 2px;
-                    position:relative;
-                    left: 225px;
-                    top: -165px;
-                    background-color: $color-tertiary;
-                    color: rgb(35, 145, 104);
-                }
-            }
-            &__details{
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                &__names{
-                    margin-left: 10px;
-                }
-                h3{
-                    margin: 10px 0 5px 0;
-                }
-                h4{
-                    margin: 0;
-                    font-weight: normal;
-                }
-                &__icones{
-                    margin-right: 20px;
-                    font-size: 1.5rem;
-                    cursor: pointer;
-                    .fas{
-                        display: none;
-                    }
-                    &:hover{
-                        color: $color-primary;
-                        .fas{
-                            display: block;
-                            text-transform: uppercase;
-                            background: linear-gradient($color-primary 0, $color-secondary 100%);
-                            -webkit-background-clip: text;
-                            -webkit-text-fill-color: transparent;
-                        }
-                        .far{
-                            display: none;
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
-footer{
-    background-color: rgb(42, 41, 41);
-    padding-left: 28px;
-    h3{
-        font-family: 'Shrikhand', sans-serif;
-        color: #fff;
-    }
-    ul{
-        display: flex;
-        flex-wrap: wrap;
-        padding:0;
-        li{
-            list-style-type: none;
-            margin-bottom: 10px;
-            width: 230px;
-            a{
-                color: #fff;
-                text-decoration: none;
-                i{
-                    margin-right: 10px;
-                    width: 20px;
-                }
-            }
-        }
-    }
-}
-header i{
-    font-size: 1.7rem;
-    color: black;
-}
-.arrow{
-    position: relative;
-    right:20%;
-}
-.image-menu{
-    display: flex;
-    justify-content: center;
-    height: 300px;
-    img{
-        object-fit: cover;
-        width: 110%;
-    }
-}
-.menu{
-    border-radius: 50px 50px 0 0;
-    background-color: #f2f2f2;
-    position: relative;
-    top: -55px;
-    margin-bottom: -55px;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    &__title{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 100%;
-        h1{
-            margin-left: 20px;
-            font-family: 'Shrikhand', sans-serif;
-        }
-        &__icone{
-            margin-right: 40px;
-            font-size: 1.5rem;
-            cursor: pointer;
-            .fas{
-                display: none;
-            }
-            &:hover{
-                color: $color-primary;
-                .fas{
-                    display: block;
-                    text-overflow: ellipsis;
-                }
-                .far{
-                    display: none;
-                }
-            }
-        }
-    }
-    &__blocks{
-        margin: auto;
-        h3{
-            font-weight: normal;
-            margin: 0 0 5px 5px;
-            }
-        .green_line{
-            color: $color-tertiary;
-            border: 2px solid;
-            width: 50px;
-            margin-left: 5px;
-            margin-bottom: 15px;
-            }
-        &__liste{
-            &__choix{
-                background-color: white;
-                border-radius: 20px;
-                width: 350px;
-                height: 70px;
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                margin-bottom: 20px;
-                animation: show 1000ms both;
-                @for $i from 2 through 4{
-                    &:nth-child(#{$i}){
-                    animation-delay: 100ms * $i;
-                        }
-                &__détails{
-                    display: flex;
-                    justify-content: space-between;
-                    flex: 1;
-                    &__titres{
-                        h4{
-                            font-weight: bold;
-                            font-size: 1.2rem;
-                            margin: 10px 0 5px 12px;
-                            -webkit-line-clamp: 1;
-                            display: -webkit-box;
-                            -webkit-box-orient: vertical;
-                            overflow: hidden;
-                        }
-                        p{
-                            margin: 0 0 15px 12px;
-                            -webkit-line-clamp: 1;
-                            display: -webkit-box;
-                            -webkit-box-orient: vertical;
-                            overflow: hidden;
-                        }
-                    }
-                    &__prix{
-                        text-align: end;
-                        display: flex;
-                        align-items: flex-end;
-                        margin: 0 20px 15px 0;
-                        font-weight: bold;
-                        }
-                    }
-                    &:hover{
-                        .menu__blocks__liste__choix__check{
-                            display: block;
-                            margin-right: 0;
-
-                        }
-                        i{
-                            animation: check 1s ease;
-                        }
-                    }
-                    &__check{
-                        font-size: 1.3rem;
-                        width: 4rem;
-                        line-height: 70px;
-                        background-color: $color-tertiary;
-                        color: white;
-                        border-radius: 0 20px 20px 0;
-                        cursor: pointer;
-                        text-align: center;
-                        display: none;
-                        margin-right: -4rem;
-                        transition: 1s;
-                    }
-                }
-            }
-        }
-    }
-}
-.container{
-    background-color: #f2f2f2;
-    padding-bottom: 100px;
-    border: #f2f2f2 1px solid;
-    &__btn{
-        margin: 50px auto 0;
-        background: linear-gradient(350deg, $color-primary 0%, $color-secondary 100%);
-        color: #fff;
-        height: 50px;
-        line-height: 50px;
-        width: 200px;
-        border-radius: 25px;
-        box-shadow: 0px 5px 10px #a9a3a3;
-        display: flex;
-        justify-content: center;
-        cursor: pointer;
-    }
-}
-@keyframes show{
-    0%{
-        transform: translatey(20%);
-        opacity: O;
-    }
-    100%{
-        transform: translatey(0);
-        opacity: 1;
-    }
-}
-@keyframes disappear{
-    0%{
-        transform: scale(1);
-    }
-    100%{
-        transform: scale(0);
-    }
-
-}
-@keyframes spiner{
-    to{
-        transform: rotate(360deg);
-    }
-}
-@keyframes check{
-    0%{
-        transform: rotate(-270deg);
-    }
-    100%{
-        transform: rotate(0);
-    }
-}
+@import "components/_components.scss";
+@import "layout/footer";
+@import "layout/menu";
+@import "layout/header";
+@import "pages/acceuil";
