--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,39 @@
 @charset "UTF-8";
-* {
-  font-family: "roboto", sans-serif;
+@keyframes show {
+  0% {
+    transform: translatey(50px);
+    opacity: 0;
+  }
+  20% {
+    opacity: 0;
+  }
+  100% {
+    transform: translatey(0);
+    opacity: 1;
+  }
 }
-
-body {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
+@keyframes disappear {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
 }
-
+@keyframes spiner {
+  to {
+    transform: rotate(360deg);
+  }
+}
 .loader {
   position: fixed;
-  background-color: #ffffff;
+  background-color: #fff;
   display: grid;
   place-items: center;
   height: 100vh;
   inset: 0;
   z-index: 1;
-  opacity: 0, 1;
+  opacity: 0.9;
   animation: disappear 200ms 4s forwards;
   transform-origin: top;
 }
@@ -32,15 +48,238 @@ body {
   animation-iteration-count: 4;
 }
 
+* {
+  font-family: "roboto", sans-serif;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.exploration__btn {
+  margin: auto;
+  width: 220px;
+  background: linear-gradient(350deg, #9356DC 0%, #FF79DA 100%);
+  color: #fff;
+  height: 50px;
+  line-height: 50px;
+  border-radius: 25px;
+  box-shadow: 0px 5px 10px #a9a3a3;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+}
+.exploration__btn:hover {
+  transform: scale(1.02);
+  opacity: 0.9;
+}
+
+.container__btn {
+  margin: 50px auto 0;
+  width: 200px;
+  background: linear-gradient(350deg, #9356DC 0%, #FF79DA 100%);
+  color: #fff;
+  height: 50px;
+  line-height: 50px;
+  border-radius: 25px;
+  box-shadow: 0px 5px 10px #a9a3a3;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+}
+.container__btn:hover {
+  transform: scale(1.02);
+  opacity: 0.9;
+}
+
+footer {
+  background-color: #2a2929;
+  padding-left: 28px;
+}
+footer h3 {
+  font-family: "Shrikhand", sans-serif;
+  color: #fff;
+}
+footer ul {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+}
+footer ul li {
+  list-style-type: none;
+  margin-bottom: 10px;
+  width: 230px;
+}
+footer ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+footer ul li a i {
+  margin-right: 10px;
+  width: 20px;
+}
+
+.image-menu {
+  display: flex;
+  justify-content: center;
+  height: 300px;
+}
+.image-menu img {
+  object-fit: cover;
+  width: 110%;
+}
+
+.menu {
+  border-radius: 50px 50px 0 0;
+  background-color: #f2f2f2;
+  position: relative;
+  top: -55px;
+  margin-bottom: -55px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.menu__title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.menu__title h1 {
+  margin-left: 20px;
+  font-family: "Shrikhand", sans-serif;
+}
+.menu__title__icone {
+  margin-right: 40px;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+.menu__title__icone .fas {
+  color: transparent;
+  background: linear-gradient(350deg, #9356DC 0%, #FF79DA 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  transition: all 200ms ease-in-out;
+  position: relative;
+  left: 30px;
+  opacity: 0;
+}
+.menu__title__icone:hover .fas {
+  opacity: 1;
+}
+.menu__blocks {
+  margin: auto;
+}
+.menu__blocks h3 {
+  font-weight: normal;
+  margin: 0 0 5px 5px;
+  animation: show 1s;
+}
+.menu__blocks .green_line {
+  color: #99E2D0;
+  border: 2px solid;
+  width: 50px;
+  margin-left: 5px;
+  margin-bottom: 15px;
+  animation: show 1.5s;
+}
+.menu__blocks__liste__choix {
+  background-color: white;
+  border-radius: 20px;
+  width: 350px;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
+  margin-bottom: 20px;
+  animation: show 1s;
+  animation-fill-mode: both;
+}
+.menu__blocks__liste__choix:nth-child(1) {
+  animation-delay: 0.1s;
+}
+.menu__blocks__liste__choix:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.menu__blocks__liste__choix:nth-child(3) {
+  animation-delay: 0.3s;
+}
+.menu__blocks__liste__choix__détails {
+  display: flex;
+  justify-content: space-between;
+  flex: 1;
+}
+.menu__blocks__liste__choix__détails__titres h4 {
+  font-weight: bold;
+  font-size: 1.2rem;
+  margin: 10px 0 5px 12px;
+  -webkit-line-clamp: 1;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.menu__blocks__liste__choix__détails__titres p {
+  margin: 0 0 15px 12px;
+  -webkit-line-clamp: 1;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.menu__blocks__liste__choix__détails__prix {
+  text-align: end;
+  display: flex;
+  align-items: flex-end;
+  margin: 0 20px 15px 0;
+  font-weight: bold;
+}
+.menu__blocks__liste__choix__check {
+  font-size: 1.3rem;
+  width: 70px;
+  line-height: 70px;
+  background-color: #99E2D0;
+  color: white;
+  border-radius: 0 20px 20px 0;
+  cursor: pointer;
+  text-align: center;
+  margin-right: -70px;
+  transition: all 0.5s;
+}
+.menu__blocks__liste__choix__check i {
+  transform: rotate(-1turn);
+  transition: transform 0.5s ease-in-out;
+}
+.menu__blocks__liste__choix:hover .menu__blocks__liste__choix__check {
+  margin-right: 0;
+}
+.menu__blocks__liste__choix:hover .menu__blocks__liste__choix__check i {
+  transform: rotate(0);
+}
+
+.container {
+  background-color: #f2f2f2;
+  padding-bottom: 100px;
+  border: #f2f2f2 1px solid;
+}
+
 header {
   width: 100%;
 }
-
-#block-logo {
+header i {
+  font-size: 1.7rem;
+  color: black;
+}
+header .block-logo {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 60px;
+}
+header .block-logo__arrow {
+  position: relative;
+  right: 20%;
 }
 
 .search-bar {
@@ -78,19 +317,6 @@ header {
   text-align: center;
   color: grey;
   font-size: 1.2rem;
-}
-.exploration__btn {
-  margin: auto;
-  background: linear-gradient(350deg, #9356DC 0%, #FF79DA 100%);
-  color: #fff;
-  height: 50px;
-  line-height: 50px;
-  width: 220px;
-  border-radius: 25px;
-  box-shadow: 0px 5px 10px #a9a3a3;
-  display: flex;
-  justify-content: center;
-  cursor: pointer;
 }
 
 nav {
@@ -172,11 +398,11 @@ section .restaurants__block {
   box-shadow: 0px 5px 10px #a9a3a3;
 }
 section .restaurants__block__images {
-  border-radius: 15px 15px 0 0;
   height: 160px;
 }
 section .restaurants__block__images img {
   height: 160px;
+  border-radius: 15px 15px 0 0;
   width: 100%;
   object-fit: cover;
   object-position: bottom;
@@ -219,335 +445,17 @@ section .restaurants__block__details__icones {
   cursor: pointer;
 }
 section .restaurants__block__details__icones .fas {
-  display: none;
-}
-section .restaurants__block__details__icones:hover {
-  color: #9356DC;
+  color: transparent;
+  background: linear-gradient(350deg, #9356DC 0%, #FF79DA 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  transition: all 200ms ease-in-out;
+  position: relative;
+  left: 30px;
+  opacity: 0;
 }
 section .restaurants__block__details__icones:hover .fas {
-  display: block;
-  text-transform: uppercase;
-  background: linear-gradient(#9356DC 0, #FF79DA 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-section .restaurants__block__details__icones:hover .far {
-  display: none;
-}
-
-footer {
-  background-color: #2a2929;
-  padding-left: 28px;
-}
-footer h3 {
-  font-family: "Shrikhand", sans-serif;
-  color: #fff;
-}
-footer ul {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0;
-}
-footer ul li {
-  list-style-type: none;
-  margin-bottom: 10px;
-  width: 230px;
-}
-footer ul li a {
-  color: #fff;
-  text-decoration: none;
-}
-footer ul li a i {
-  margin-right: 10px;
-  width: 20px;
-}
-
-header i {
-  font-size: 1.7rem;
-  color: black;
-}
-
-.arrow {
-  position: relative;
-  right: 20%;
-}
-
-.image-menu {
-  display: flex;
-  justify-content: center;
-  height: 300px;
-}
-.image-menu img {
-  object-fit: cover;
-  width: 110%;
-}
-
-.menu {
-  border-radius: 50px 50px 0 0;
-  background-color: #f2f2f2;
-  position: relative;
-  top: -55px;
-  margin-bottom: -55px;
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-}
-.menu__title {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-}
-.menu__title h1 {
-  margin-left: 20px;
-  font-family: "Shrikhand", sans-serif;
-}
-.menu__title__icone {
-  margin-right: 40px;
-  font-size: 1.5rem;
-  cursor: pointer;
-}
-.menu__title__icone .fas {
-  display: none;
-}
-.menu__title__icone:hover {
-  color: #9356DC;
-}
-.menu__title__icone:hover .fas {
-  display: block;
-  text-overflow: ellipsis;
-}
-.menu__title__icone:hover .far {
-  display: none;
-}
-.menu__blocks {
-  margin: auto;
-}
-.menu__blocks h3 {
-  font-weight: normal;
-  margin: 0 0 5px 5px;
-}
-.menu__blocks .green_line {
-  color: #99E2D0;
-  border: 2px solid;
-  width: 50px;
-  margin-left: 5px;
-  margin-bottom: 15px;
-}
-.menu__blocks__liste__choix {
-  background-color: white;
-  border-radius: 20px;
-  width: 350px;
-  height: 70px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 20px;
-  animation: show 1000ms both;
-}
-.menu__blocks__liste__choix:nth-child(2) {
-  animation-delay: 200ms;
-}
-.menu__blocks__liste__choix__détails {
-  display: flex;
-  justify-content: space-between;
-  flex: 1;
-}
-.menu__blocks__liste__choix__détails__titres h4 {
-  font-weight: bold;
-  font-size: 1.2rem;
-  margin: 10px 0 5px 12px;
-  -webkit-line-clamp: 1;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-}
-.menu__blocks__liste__choix__détails__titres p {
-  margin: 0 0 15px 12px;
-  -webkit-line-clamp: 1;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-}
-.menu__blocks__liste__choix__détails__prix {
-  text-align: end;
-  display: flex;
-  align-items: flex-end;
-  margin: 0 20px 15px 0;
-  font-weight: bold;
-}
-.menu__blocks__liste__choix:hover .menu__blocks__liste__choix__check {
-  display: block;
-  margin-right: 0;
-}
-.menu__blocks__liste__choix:hover i {
-  animation: check 1s ease;
-}
-.menu__blocks__liste__choix__check {
-  font-size: 1.3rem;
-  width: 4rem;
-  line-height: 70px;
-  background-color: #99E2D0;
-  color: white;
-  border-radius: 0 20px 20px 0;
-  cursor: pointer;
-  text-align: center;
-  display: none;
-  margin-right: -4rem;
-  transition: 1s;
-}
-.menu__blocks__liste__choix:nth-child(3) {
-  animation-delay: 300ms;
-}
-.menu__blocks__liste__choix__détails {
-  display: flex;
-  justify-content: space-between;
-  flex: 1;
-}
-.menu__blocks__liste__choix__détails__titres h4 {
-  font-weight: bold;
-  font-size: 1.2rem;
-  margin: 10px 0 5px 12px;
-  -webkit-line-clamp: 1;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-}
-.menu__blocks__liste__choix__détails__titres p {
-  margin: 0 0 15px 12px;
-  -webkit-line-clamp: 1;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-}
-.menu__blocks__liste__choix__détails__prix {
-  text-align: end;
-  display: flex;
-  align-items: flex-end;
-  margin: 0 20px 15px 0;
-  font-weight: bold;
-}
-.menu__blocks__liste__choix:hover .menu__blocks__liste__choix__check {
-  display: block;
-  margin-right: 0;
-}
-.menu__blocks__liste__choix:hover i {
-  animation: check 1s ease;
-}
-.menu__blocks__liste__choix__check {
-  font-size: 1.3rem;
-  width: 4rem;
-  line-height: 70px;
-  background-color: #99E2D0;
-  color: white;
-  border-radius: 0 20px 20px 0;
-  cursor: pointer;
-  text-align: center;
-  display: none;
-  margin-right: -4rem;
-  transition: 1s;
-}
-.menu__blocks__liste__choix:nth-child(4) {
-  animation-delay: 400ms;
-}
-.menu__blocks__liste__choix__détails {
-  display: flex;
-  justify-content: space-between;
-  flex: 1;
-}
-.menu__blocks__liste__choix__détails__titres h4 {
-  font-weight: bold;
-  font-size: 1.2rem;
-  margin: 10px 0 5px 12px;
-  -webkit-line-clamp: 1;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-}
-.menu__blocks__liste__choix__détails__titres p {
-  margin: 0 0 15px 12px;
-  -webkit-line-clamp: 1;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-}
-.menu__blocks__liste__choix__détails__prix {
-  text-align: end;
-  display: flex;
-  align-items: flex-end;
-  margin: 0 20px 15px 0;
-  font-weight: bold;
-}
-.menu__blocks__liste__choix:hover .menu__blocks__liste__choix__check {
-  display: block;
-  margin-right: 0;
-}
-.menu__blocks__liste__choix:hover i {
-  animation: check 1s ease;
-}
-.menu__blocks__liste__choix__check {
-  font-size: 1.3rem;
-  width: 4rem;
-  line-height: 70px;
-  background-color: #99E2D0;
-  color: white;
-  border-radius: 0 20px 20px 0;
-  cursor: pointer;
-  text-align: center;
-  display: none;
-  margin-right: -4rem;
-  transition: 1s;
-}
-
-.container {
-  background-color: #f2f2f2;
-  padding-bottom: 100px;
-  border: #f2f2f2 1px solid;
-}
-.container__btn {
-  margin: 50px auto 0;
-  background: linear-gradient(350deg, #9356DC 0%, #FF79DA 100%);
-  color: #fff;
-  height: 50px;
-  line-height: 50px;
-  width: 200px;
-  border-radius: 25px;
-  box-shadow: 0px 5px 10px #a9a3a3;
-  display: flex;
-  justify-content: center;
-  cursor: pointer;
-}
-
-@keyframes show {
-  0% {
-    transform: translatey(20%);
-    opacity: O;
-  }
-  100% {
-    transform: translatey(0);
-    opacity: 1;
-  }
-}
-@keyframes disappear {
-  0% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(0);
-  }
-}
-@keyframes spiner {
-  to {
-    transform: rotate(360deg);
-  }
-}
-@keyframes check {
-  0% {
-    transform: rotate(-270deg);
-  }
-  100% {
-    transform: rotate(0);
-  }
+  opacity: 1;
 }
 
 /*# sourceMappingURL=styles.css.map */
