--- a/css/styles.css
+++ b/css/styles.css
@@ -171,6 +171,17 @@ footer ul li a i {
 }
 .menu__blocks {
   margin: auto;
+  animation: show 1s;
+  animation-fill-mode: both;
+}
+.menu__blocks:nth-child(2) {
+  animation-delay: 0.4s;
+}
+.menu__blocks:nth-child(3) {
+  animation-delay: 0.6s;
+}
+.menu__blocks:nth-child(4) {
+  animation-delay: 0.8s;
 }
 .menu__blocks h3 {
   font-weight: normal;
