--- a/css/styles.css
+++ b/css/styles.css
@@ -150,6 +150,7 @@ footer ul li a i {
 .menu__title h1 {
   margin-left: 20px;
   font-family: "Shrikhand", sans-serif;
+  font-size: 25px;
 }
 .menu__title__icone {
   margin-right: 40px;
