--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -24,6 +24,7 @@
         h1{
             margin-left: 20px;
             font-family: 'Shrikhand', sans-serif;
+            font-size: 25px;
         }
         &__icone{
             margin-right: 40px;
